--- a/system/templates/apps/parts/setup/actions.hbs
+++ b/system/templates/apps/parts/setup/actions.hbs
@@ -1,23 +1,21 @@
-<div class="fatex__sheet_setup__actions">
-    <span class="fatex__sheet_setup__action setup_action--clear-aspects {{#unless hasAspects}}fatex__sheet_setup__action--disabled{{/unless}}">
+<div class="fatex-setup-actions">
+    <span class="fatex-eb-clear-aspects fatex-setup-actions__button{{#unless hasAspects}} fatex-setup-actions__button--disabled{{/unless}}">
         {{localize "FAx.Apps.Setup.Actions.Clear.Aspects"}}
     </span>
 
-    <span class="fatex__sheet_setup__action setup_action--clear-consequences {{#unless hasConsequences}}fatex__sheet_setup__action--disabled{{/unless}} ">
+    <span class="fatex-eb-clear-consequences fatex-setup-actions__button{{#unless hasConsequences}} fatex-setup-actions__button--disabled{{/unless}} ">
         {{localize "FAx.Apps.Setup.Actions.Clear.Consequences"}}
     </span>
 
-    <span class="fatex__sheet_setup__action setup_action--clear-skills {{#unless hasSkills}}fatex__sheet_setup__action--disabled{{/unless}}">
+    <span class="fatex-eb-clear fatex-setup-actions__button fatex-setup-actions__button--clear-all{{#unless hasAny}} fatex-setup-actions__button--disabled{{/unless}}">
+        <span>{{localize "FAx.Apps.Setup.Actions.Clear.Everything"}}</span>
+    </span>
+
+    <span class="fatex-eb-clear-skills fatex-setup-actions__button{{#unless hasSkills}} fatex-setup-actions__button--disabled{{/unless}}">
         {{localize "FAx.Apps.Setup.Actions.Clear.Skills"}}
     </span>
 
-    <span class="fatex__sheet_setup__action setup_action--clear-stress {{#unless hasStress}}fatex__sheet_setup__action--disabled{{/unless}}">
+    <span class="fatex-eb-clear-stress fatex-setup-actions__button{{#unless hasStress}} fatex-setup-actions__button--disabled{{/unless}}">
         {{localize "FAx.Apps.Setup.Actions.Clear.Stress"}}
-    </span>
-
-    <span class="fatex__sheet_setup__action setup_action--clear {{#unless hasAny}}fatex__sheet_setup__action--disabled{{/unless}}">
-        <div>
-            <span>{{localize "FAx.Apps.Setup.Actions.Clear.Everything"}}</span>
-        </div>
     </span>
 </div>
