--- a/system/templates/apps/sheet-setup.hbs
+++ b/system/templates/apps/sheet-setup.hbs
@@ -2,15 +2,19 @@
     title="FAx.Apps.Setup.Title"
 }}
 
-<div class="fatex__sheet_setup">
-    <div class="fatex__sheet_setup__manage">
-        <h2>{{localize "FAx.Apps.Setup.Manage"}}</h2>
+<div class="fatex-sheet-setup">
+    <section>
+        <h2 class="fatex-section-heading fatex-section-heading--no-border">
+            {{localize "FAx.Apps.Setup.Manage"}}
+        </h2>
 
         {{> "systems/fatex/templates/apps/parts/setup/actions.hbs" }}
-    </div>
+    </section>
 
-    <div class="fatex__sheet_setup__setup">
-        <h2>{{localize "FAx.Apps.Setup.Setup"}}</h2>
+    <div class="fatex-sheet-setup__main">
+        <h2 class="fatex-section-heading fatex-section-heading--no-border">
+            {{localize "FAx.Apps.Setup.Setup"}}
+        </h2>
 
         <div class="fatex__vertical_tabs">
             <nav class="fatex__vertical_tabs__navigation">
