--- a/system/templates/apps/template-actors.hbs
+++ b/system/templates/apps/template-actors.hbs
@@ -41,15 +41,15 @@
             </div>
 
             <div class="fatex__template__actions">
-                <span class="fatex__template__configure fatex__item__settings" data-template="{{template._id}}">
+                <span class="fatex__template__configure fatex-button fatex-button--dark fatex__item__settings" data-template="{{template._id}}">
                     {{localize "FAx.Global.Actions.Configure"}}
                 </span>
 
-                <span class="fatex__template__duplicate fatex__item__duplicate" data-template="{{template._id}}">
+                <span class="fatex__template__duplicate fatex-button fatex-button--dark fatex__item__duplicate" data-template="{{template._id}}">
                     {{localize "FAx.Global.Actions.Duplicate"}}
                 </span>
 
-                <span class="fatex__template__delete fatex__item__delete" data-template="{{template._id}}">
+                <span class="fatex__template__delete fatex-button fatex-button--dark fatex__item__delete" data-template="{{template._id}}">
                     {{localize "FAx.Global.Actions.Delete"}}
                 </span>
             </div>
