--- a/src/styles/components/apps/setup/setup.scss
+++ b/src/styles/components/apps/setup/setup.scss
@@ -2,8 +2,32 @@
     padding: $component-padding;
     min-width: 100%;
 
+    &__button {
+        display: inline-block;
+        padding: $component-padding;
+        background: $primary-color;
+        color: $headline-color;
+        font-size: 10px;
+        font-weight: bold;
+        text-transform: uppercase;
+        box-shadow: 2px 2px 4px 0 $primary-color;
+        cursor: pointer;
+
+        @include fa-icon($fa-var-plus);
+    }
+
     &__main {
         margin-top: $component-padding * 4;
+    }
+
+    &__section {
+        margin-bottom: $component-padding * 2;
+
+        .fatex__headline__actions {
+            font-size: 10px;
+            opacity: 1;
+            pointer-events: all;
+        }
     }
 }
 
@@ -43,16 +67,6 @@
     }
 }
 
-.fatex__sheet_setup__type {
-    margin-bottom: $component-padding * 2;
-
-    .fatex__headline__actions {
-        font-size: 10px;
-        opacity: 1;
-        pointer-events: all;
-    }
-}
-
 .fatex__sheet_setup__groups {
     display: flex;
     flex-wrap: wrap;
@@ -70,14 +84,15 @@
 }
 
 .fatex__sheet_setup__group__label {
+    position: relative;
+    display: block;
+    margin-bottom: $component-padding;
+    font-size: 10px;
     font-weight: bold;
     text-transform: uppercase;
-    margin-bottom: $component-padding;
-    display: block;
-    font-size: 10px;
-
-    position: relative;
     cursor: pointer;
+
+    @include fa-icon($fa-var-sync);
 }
 
 .fatex__sheet_setup__options--columns {
@@ -126,24 +141,6 @@
     text-align: center;
 }
 
-.fatex__sheet_setup__type__action {
-    padding: $component-padding;
-    background: $primary-color;
-    color: $headline-color;
-    box-shadow: 2px 2px 4px 0 $primary-color;
-    display: inline-block;
-
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 10px;
-    cursor: pointer;
-}
-
 .setup_action--setup-type {
     @include fa-icon($fa-var-plus);
-}
-
-.setup_action--toggle-type {
-    @include fa-icon($fa-var-sync);
-    cursor: pointer;
 }
