--- a/src/styles/components/desk/desk.scss
+++ b/src/styles/components/desk/desk.scss
@@ -42,6 +42,14 @@
             grid-area: consequences;
         }
 
+        .desk__aspects,
+        .desk__consequences {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            padding: 10px;
+        }
+
         .desk__tabs {
             grid-area: tabs;
         }
