--- a/src/styles/components/headline/headline.scss
+++ b/src/styles/components/headline/headline.scss
@@ -1,5 +1,6 @@
 .fatex-headline {
     position: relative;
+    margin-bottom: 0.5rem;
     color: $headline-color;
     background: $headline-background;
 
@@ -69,6 +70,7 @@
 
     &__text {
         position: relative;
+        margin: 0;
         padding: $component-padding / 2 $component-padding * 2;
         border: none;
         font-size: 13px;
