Simplifies the copyright notice, removing several unnecessary elements and trimming down the styling code.

--- a/src/styles/components/copyright/copyright.scss
+++ b/src/styles/components/copyright/copyright.scss
@@ -1,10 +1,7 @@
-.fatex__copyright {
+.fatex-copyright {
+    grid-area: copyright;
     padding: $component-padding;
     font-size: 10px;
     text-align: center;
     color: $primary-color;
-
-    p {
-        margin: 0;
-    }
 }
