--- a/system/templates/actor/parts/copyright.hbs
+++ b/system/templates/actor/parts/copyright.hbs
@@ -1,6 +1,4 @@
-<div class="fatex__copyright">
-    <p>
-        Fate™ is a trademark of Evil Hat Productions, LLC.<br />
-        The Powered by Fate logo is © Evil Hat Productions, LLC and is used with permission.
-    </p>
-</div>
+<small class="fatex-copyright">
+    Fate™ is a trademark of Evil Hat Productions, LLC.<br />
+    The Powered by Fate logo is © Evil Hat Productions, LLC and is used with permission.
+</small>
