Removes the need for a dedicated __die element for dice in the chat.

--- a/system/templates/chat/roll-skill.hbs
+++ b/system/templates/chat/roll-skill.hbs
@@ -10,7 +10,7 @@
     <div class="fatex-roll">
         <div class="fatex-dice">
             {{#each dice as |die dieIndex|}}
-                <div class="fatex-dice__die">{{ die.face }}</div>
+                <div>{{ die.face }}</div>
             {{/each}}
         </div>
 
