Unifies the input field implementation across the system. Includes a lot of template and style changes.

--- a/src/styles/components/consequences/consequences.scss
+++ b/src/styles/components/consequences/consequences.scss
@@ -1,3 +1,9 @@
+.fatex-consequence {
+    display: flex;
+    flex-direction: column-reverse;
+    position: relative;
+}
+
 div.fatex__consequence--condition {
     padding-left: 36px;
 }
@@ -8,12 +14,6 @@ div.fatex__consequence--condition {
 
 .fatex__consequence__actions {
     font-size: 18px;
-}
-
-.fatex__consequence__input {
-    border-radius: 3px;
-    border-bottom: 1px solid $primary-color;
-    padding: 3px 0;
 }
 
 .fatex__consequence__box {
