--- a/system/templates/actor/group.hbs
+++ b/system/templates/actor/group.hbs
@@ -5,8 +5,8 @@
 
     <form autocomplete="off" class="{{cssClass}}">
         <div class="fatex__actor_group__settings">
-            <input class="fatex__header__name__input fatex__input" name="name" type="text" value="{{actor.name}}" />
-            <input class="fatex__header__name__input fatex__input" name="data.groupType" type="text" value="{{actor.data.groupType}}" />
+            <input class="fatex__header__name__input" name="name" type="text" value="{{actor.name}}" />
+            <input class="fatex__header__name__input" name="data.groupType" type="text" value="{{actor.data.groupType}}" />
 
             {{#if availableTokens}}
                 <div class="fatex__actor_group__availableTokens">
