--- a/system/templates/actor/parts/header.hbs
+++ b/system/templates/actor/parts/header.hbs
@@ -5,7 +5,7 @@
         </label>
 
         <input
-            class="fatex-header__input fatex__input"
+            class="fatex-text-input fatex-text-input--header"
             name="name"
             type="text"
             value="{{actor.name}}"
@@ -19,7 +19,7 @@
 
         <div class="fatex-header__fate-points-wrapper">
             <input
-                class="fatex-header__input fatex-header__input--fp"
+                class="fatex-text-input fatex-text-input--fp"
                 name="data.fatepoints.current"
                 type="text"
                 value="{{data.fatepoints.current}}"
@@ -28,7 +28,7 @@
             <span class="fatex-header__fatepoint-divider"> / </span>
 
             <input
-                class="fatex-header__input fatex-header__input--fp"
+                class="fatex-text-input fatex-text-input--fp"
                 name="data.fatepoints.refresh"
                 type="text"
                 value="{{data.fatepoints.refresh}}"
