--- a/system/templates/actor/parts/sidebar/artwork.hbs
+++ b/system/templates/actor/parts/sidebar/artwork.hbs
@@ -10,5 +10,5 @@
     </header>
 
     <div class="fatex-artwork__image fatex-artwork__image--{{actor._id}}" title="{{actor.name}}"></div>
-    <img class="fatex-artwork__handler profile" alt="{{actor.name}}" data-edit="img" src="{{actor.img}}"/>
+    <img class="fatex-artwork__handler" alt="{{actor.name}}" data-edit="img" src="{{actor.img}}"/>
 </div>
