--- a/system/templates/actor/parts/tabloid/aspects.hbs
+++ b/system/templates/actor/parts/tabloid/aspects.hbs
@@ -6,11 +6,11 @@
 </header>
 
 {{#each aspects as |aspect aspectIndex|}}
-    <div class="fatex__aspect fatex__input fatex-eb-sortable item" data-item-id="{{aspect._id}}">
+    <div class="fatex-aspect fatex-eb-sortable item" data-item-id="{{aspect._id}}">
         <label class="fatex__aspect__label fatex__input__label">{{aspect.data.label}}</label>
 
         <div class="fatex__aspect__actions_wrapper">
-            <div class="fatex__aspect__input fatex__input__input" contenteditable="true" data-item-id="{{aspect._id}}">{{{aspect.data.value}}}</div>
+            <div class="fatex-eb-aspect-input fatex-text-input" contenteditable="true" data-item-id="{{aspect._id}}">{{{aspect.data.value}}}</div>
 
             <div class="fatex__aspect__actions fatex__item__actions">
                 <span class="fatex__aspect__sort fatex__item__sort"></span>
