--- a/system/templates/item/parts/settings/setting-editor.hbs
+++ b/system/templates/item/parts/settings/setting-editor.hbs
@@ -3,11 +3,10 @@
         <h3 class="fatex-headline__text">{{localize headline}}</h3>
     </header>
 
-    <label class="fatex__input fatex__setting__editor" for="{{ fieldName }}">
-        {{#if help}}<span class="fatex__setting__help">{{localize help}}</span>{{/if}}
-
+    <label class="fatex__setting__editor" for="{{ fieldName }}">
         <div class="fatex__setting__editor__editor">
             {{editor content=field target=fieldName button=true owner=owner editable=editable}}
         </div>
+        {{#if help}}<span class="fatex__setting__help">{{localize help}}</span>{{/if}}
     </label>
 </div>
