--- a/system/templates/item/stress-sheet.hbs
+++ b/system/templates/item/stress-sheet.hbs
@@ -62,9 +62,9 @@
             <h3 class="fatex-headline__text">{{localize "FAx.Item.Stress.Boxes.Custom"}}</h3>
         </header>
 
-        <label class="fatex__input" for="data.customLabel">
+        <label for="data.customLabel">
+            <input type="text" class="fatex-text-input" name="data.customLabel" value="{{data.customLabel}}"/>
             <span class="fatex__setting__help">{{localize "FAx.Item.Stress.Boxes.CustomHelp"}}</span>
-            <input type="text" class="fatex__setting__input fatex__input__input" name="data.customLabel" value="{{data.customLabel}}"/>
         </label>
     </div>
 
