--- a/src/styles/components/aspects/aspects.scss
+++ b/src/styles/components/aspects/aspects.scss
@@ -1,13 +1,13 @@
+.fatex-aspect {
+    display: flex;
+    flex-direction: column-reverse;
+    position: relative;
+}
+
 .fatex__aspect__actions_wrapper {
     position: relative;
 }
 
 .fatex__aspect__actions {
     font-size: 18px;
-}
-
-.fatex__aspect__input {
-    border-radius: 3px;
-    border-bottom: 1px solid $primary-color;
-    padding: 3px 0;
 }
