--- a/system/templates/inline-sheet/parts/aspects.hbs
+++ b/system/templates/inline-sheet/parts/aspects.hbs
@@ -1,8 +1,8 @@
 <div class="u-padding-std">
     {{#each aspects as |aspect aspectIndex|}}
-        <div class="fatex__aspect fatex__input fatex-eb-sortable item" data-item-id="{{aspect._id}}">
+        <div class="fatex-aspect fatex-eb-sortable item" data-item-id="{{aspect._id}}">
             <div class="fatex__aspect__actions_wrapper">
-                <div class="fatex__aspect__input fatex__input__input" data-placeholder="{{aspect.data.label}}" contenteditable="true" data-item-id="{{aspect._id}}">{{{aspect.data.value}}}</div>
+                <div class="fatex-eb-aspect-input fatex-text-input" data-placeholder="{{aspect.data.label}}" contenteditable="true" data-item-id="{{aspect._id}}">{{{aspect.data.value}}}</div>
             </div>
         </div>
     {{/each}}
