--- a/system/templates/item/parts/settings/setting-text.hbs
+++ b/system/templates/item/parts/settings/setting-text.hbs
@@ -3,15 +3,9 @@
         <h3 class="fatex-headline__text">{{localize headline}}</h3>
     </header>
 
-    <label class="fatex__input fatex__setting__text" for="{{ fieldName }}">
-        {{#if help}}<span class="fatex__setting__help">{{localize help}}</span>{{/if}}
+    <label class="fatex__setting__text" for="{{ fieldName }}">
+        <div contenteditable="true" class="fatex-text-input" data-edit="{{ fieldName }}">{{{field}}}</div>
 
-        <div
-            contenteditable="true"
-            class="fatex__setting__input fatex__input__input"
-            data-edit="{{ fieldName }}"
-        >
-            {{{ field }}}
-        </div>
+        {{#if help}}<span class="fatex__setting__help">{{localize help}}</span>{{/if}}
     </label>
 </div>
