Fixes a small visual bug with the stress add button in edit mode.

--- a/system/templates/actor/parts/sidebar/stress.hbs
+++ b/system/templates/actor/parts/sidebar/stress.hbs
@@ -39,7 +39,9 @@
     {{/each}}
 
     <div class="fatex__stress__track fatex__helper__editmode">
-        <h2 class="fatex-headline fatex-headline--center fatex__stress__add">+</h2>
+        <div class="fatex-headline fatex-headline--center fatex__stress__add">
+            <h3 class="fatex-headline__text">+</h3>
+        </div>
     </div>
 
 </div>
