Creates new style and binding classes to standardised action buttons across the system. Migrates skills to the new system.

--- a/src/styles/components/helper/helper.scss
+++ b/src/styles/components/helper/helper.scss
@@ -3,7 +3,7 @@
     opacity: 0;
 
     &:hover,
-    .fatex__helper--enable-editmode & {
+    .fatex-eb-edit-mode & {
         opacity: 1;
     }
 }
@@ -11,7 +11,7 @@
 .fatex__helper__editmode--vanish {
     display: none;
 
-    .fatex__helper--enable-editmode & {
+    .fatex-eb-edit-mode & {
         display: inherit;
     }
 }
