--- a/system/templates/actor/parts/tabloid/aspects.hbs
+++ b/system/templates/actor/parts/tabloid/aspects.hbs
@@ -9,7 +9,7 @@
     <div class="fatex-aspect fatex-eb-sortable item" data-item-id="{{aspect._id}}">
         <label class="fatex__aspect__label fatex__input__label">{{aspect.data.label}}</label>
 
-        <div class="fatex__aspect__actions_wrapper">
+        <div class="fatex-u-pos-relative">
             <div class="fatex-eb-aspect-input fatex-text-input" contenteditable="true" data-item-id="{{aspect._id}}">{{{aspect.data.value}}}</div>
 
             <div class="fatex__aspect__actions fatex__item__actions">
