--- a/system/templates/actor/parts/tabs/stunts.hbs
+++ b/system/templates/actor/parts/tabs/stunts.hbs
@@ -13,9 +13,9 @@
                 <h3 class="fatex-headline__text">{{stunt.name}}</h3>
 
                 <div class="fatex__headline__actions fatex__item__actions">
-                    <span class="fatex__item__sort fatex__stunt__sort"></span>
-                    <span class="fatex__item__settings fatex__stunt__settings" data-item="{{stunt._id}}"></span>
-                    <span class="fatex__item__delete fatex__stunt__delete" data-item="{{stunt._id}}"></span>
+                    <span class="fatex__item__sort"></span>
+                    <span class="fatex__item__settings" data-item="{{stunt._id}}"></span>
+                    <span class="fatex__item__delete" data-item="{{stunt._id}}"></span>
                 </div>
 
                 <div class="fatex__item__collapsible">
