--- a/system/templates/inline-sheet/parts/consequences.hbs
+++ b/system/templates/inline-sheet/parts/consequences.hbs
@@ -13,7 +13,7 @@
         >
             <label class="fatex__consequence__label fatex__input__label">{{consequence.data.label}}</label>
 
-            <div class="fatex__consequence__actions_wrapper">
+            <div class="fatex-u-pos-relative">
                 <div class="fatex-eb-consequence-input fatex-text-input" contenteditable="true" data-item-id="{{consequence._id}}">{{{consequence.data.value}}}</div>
 
                 {{#if consequence.isConsequence}}
