--- a/src/styles/components/sheet/configuration.scss
+++ b/src/styles/components/sheet/configuration.scss
@@ -7,7 +7,7 @@
     z-index: 5;
     color: $header-font-color;
 
-    .fatex__helper--enable-editmode & {
+    .fatex-eb-edit-mode & {
         display: block;
     }
 
