--- a/src/styles/components/skills/skills.scss
+++ b/src/styles/components/skills/skills.scss
@@ -14,7 +14,7 @@
     cursor: pointer;
     display: inline-block;
 
-    .fatex__helper--enable-editmode & {
+    .fatex-eb-edit-mode & {
         cursor: default;
     }
 }
@@ -34,16 +34,6 @@
     color: $caution-color;
 }
 
-.fatex__skill__actions {
-    @include edit-settings($headline-background);
-    pointer-events: none;
-
-    .fatex__helper--enable-editmode & {
-        opacity: 1;
-        pointer-events: all;
-    }
-}
-
 .fatex__skill__secondary__actions {
     display: flex;
     align-items: center;
@@ -58,7 +48,7 @@
     font-size: 16px;
     text-shadow: 1px -1px 1px $sheet-background;
 
-    .fatex__helper--enable-editmode & {
+    .fatex-eb-edit-mode & {
         opacity: 1;
         pointer-events: all;
     }
@@ -72,11 +62,6 @@
 .fatex__skill__decrement {
     font-family: "Fate Icons", sans-serif;
     cursor: pointer;
-}
-
-.fatex__skill__actions_wrapper {
-    position: relative;
-    color: $headline-color;
 }
 
 .fatex__skill__add {
