Removes pointer events from hidden actions. Adds new styles for collapse and expand chevrons so that they are always visible and clickable.

--- a/src/styles/components/actions.scss
+++ b/src/styles/components/actions.scss
@@ -5,6 +5,7 @@
     gap: 10px;
     height: 100%;
     text-shadow: 1px 1px 2px #a0a0a0;
+    pointer-events: none;
     z-index: 5;
 
     &--headline,
@@ -32,6 +33,12 @@
 
         &--collapse {
             @include fa-icon($fa-var-chevron-down);
+        }
+
+        &--collapse,
+        &--expand {
+            opacity: 1;
+            pointer-events: all;
         }
 
         &--delete {
