Translates the stress track actions to the new action classes.

--- a/src/styles/components/actions.scss
+++ b/src/styles/components/actions.scss
@@ -8,6 +8,10 @@
     pointer-events: none;
     z-index: 5;
 
+    &--headline {
+        right: 15px;
+    }
+
     &--headline,
     &--skill {
         top: 0;
