--- a/system/templates/actor/parts/sidebar/stress.hbs
+++ b/system/templates/actor/parts/sidebar/stress.hbs
@@ -3,10 +3,11 @@
         <div class="fatex__stress__track item {{#if stress.isDisabled}}fatex__helper--is-disabled{{/if}}" data-item-id="{{stress._id}}">
             <header class="fatex-headline fatex-eb-sortable" data-item-id="{{stress._id}}">
                 <h2 class="fatex-headline__text">{{stress.name}}</h2>
-                <div class="fatex__headline__actions fatex__item__actions">
-                    <span class="fatex__item__sort fatex__stress__sort"></span>
-                    <span class="fatex__item__settings fatex__stress__settings" data-item="{{stress._id}}"></span>
-                    <span class="fatex__item__delete fatex__stress__delete" data-item="{{stress._id}}"></span>
+
+                <div class="fatex-actions fatex-actions--headline">
+                    <span class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--drag"></span>
+                    <span class="fatex-eb-stress-settings fatex-actions__icon fatex-actions__icon--settings" data-item="{{stress._id}}"></span>
+                    <span class="fatex-eb-stress-delete fatex-actions__icon fatex-actions__icon--delete" data-item="{{stress._id}}"></span>
                 </div>
             </header>
 
