--- a/system/templates/actor/parts/tabs/extras.hbs
+++ b/system/templates/actor/parts/tabs/extras.hbs
@@ -12,14 +12,11 @@
                 <header class="fatex-headline fatex-eb-sortable" data-item-id="{{extra._id}}">
                     <h3 class="fatex-headline__text">{{extra.name}}</h3>
 
-                    <div class="fatex__headline__actions fatex__item__actions">
-                        <span class="fatex__item__sort fatex__extra__sort"></span>
-                        <span class="fatex__item__settings fatex__extra__settings" data-item="{{extra._id}}"></span>
-                        <span class="fatex__item__delete fatex__extra__delete" data-item="{{extra._id}}"></span>
-                    </div>
-
-                    <div class="fatex__item__collapsible">
-                        <span class="fatex__item__collapse fatex__stunt__collapse--toggle {{#if extra.data.collapsed}}fatex__item__collapse--closed{{/if}}" data-item="{{extra._id}}"></span>
+                    <div class="fatex-actions fatex-actions--headline">
+                        <span class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--drag"></span>
+                        <span class="fatex-eb-stunt-settings fatex-actions__icon fatex-actions__icon--settings" data-item="{{stunt._id}}"></span>
+                        <span class="fatex-eb-stunt-delete fatex-actions__icon fatex-actions__icon--delete" data-item="{{stunt._id}}"></span>
+                        <span class="fatex-eb-item-collapse fatex-actions__icon fatex-actions__icon--collapse{{#if stunt.data.collapsed}} fatex-actions__icon--expand{{/if}}" data-item="{{stunt._id}}"></span>
                     </div>
                 </header>
 
