Fixes the extra action buttons which were incorrectly modified as part of the last commit.

--- a/system/templates/actor/parts/tabs/extras.hbs
+++ b/system/templates/actor/parts/tabs/extras.hbs
@@ -14,9 +14,9 @@
 
                     <div class="fatex-actions fatex-actions--headline">
                         <span class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--drag"></span>
-                        <span class="fatex-eb-stunt-settings fatex-actions__icon fatex-actions__icon--settings" data-item="{{stunt._id}}"></span>
-                        <span class="fatex-eb-stunt-delete fatex-actions__icon fatex-actions__icon--delete" data-item="{{stunt._id}}"></span>
-                        <span class="fatex-eb-item-collapse fatex-actions__icon fatex-actions__icon--collapse{{#if stunt.data.collapsed}} fatex-actions__icon--expand{{/if}}" data-item="{{stunt._id}}"></span>
+                        <span class="fatex-eb-extra-settings fatex-actions__icon fatex-actions__icon--settings" data-item="{{extra._id}}"></span>
+                        <span class="fatex-eb-extra-delete fatex-actions__icon fatex-actions__icon--delete" data-item="{{extra._id}}"></span>
+                        <span class="fatex-eb-item-collapse fatex-actions__icon fatex-actions__icon--collapse{{#if stunt.data.collapsed}} fatex-actions__icon--expand{{/if}}" data-item="{{extra._id}}"></span>
                     </div>
                 </header>
 
