--- a/system/templates/apps/sheet-setup.hbs
+++ b/system/templates/apps/sheet-setup.hbs
@@ -33,10 +33,8 @@
                                     <header class="fatex-headline">
                                         <h2 class="fatex-headline__text">{{typeLabel}}</h2>
 
-                                        <div class="fatex__headline__actions">
-                                            <span class="fatex-headline__action fatex-headline__action--toggle fatex-eb-toggle-selection">
-                                                {{localize "FAx.Apps.Setup.Actions.Setup.ToggleSelection"}}
-                                            </span>
+                                        <div class="fatex-actions fatex-actions--headline">
+                                            <span class="fatex-eb-toggle-selection fatex-actions__icon fatex-actions__icon--toggle">{{localize "FAx.Apps.Setup.Actions.Setup.ToggleSelection"}}</span>
                                         </div>
                                     </header>
 
