Updates the extras template and fixes the add helper button. Removes further unnecessary classes.

--- a/src/styles/components/headline/headline.scss
+++ b/src/styles/components/headline/headline.scss
@@ -33,7 +33,7 @@
         margin: $component-padding auto;
     }
 
-    &--stunt {
+    &--fixed-icon {
         padding-right: $component-padding * 4;
     }
 
