--- a/system/templates/actor/parts/tabs/stunts.hbs
+++ b/system/templates/actor/parts/tabs/stunts.hbs
@@ -9,7 +9,7 @@
 
     {{#each stunts as |stunt stuntIndex|}}
         <div class="fatex__stunt item {{#if stunt.data.collapsed}}fatex__stunt__collapsed{{/if}}" data-item-id="{{stunt._id}}">
-            <header class="fatex-headline fatex-headline--stunt fatex-eb-sortable" data-item-id="{{stunt._id}}">
+            <header class="fatex-headline fatex-headline--fixed-icon fatex-eb-sortable" data-item-id="{{stunt._id}}">
                 <h3 class="fatex-headline__text">{{stunt.name}}</h3>
 
                 <div class="fatex-actions fatex-actions--headline">
