Simplifies the extras and stress add buttons. Removes a number of old styles. Adds a new --helper modifier for headlines.

--- a/src/styles/components/headline/headline.scss
+++ b/src/styles/components/headline/headline.scss
@@ -37,6 +37,11 @@
         padding-right: $component-padding * 4;
     }
 
+    &--helper {
+        display: none;
+        cursor: pointer;
+    }
+
     &__icon {
         position: absolute;
         top: 0;
@@ -87,4 +92,10 @@
     @include edit-settings($headline-background);
     pointer-events: none;
     right: 10px;
+}
+
+.fatex-eb-edit-mode {
+    .fatex-headline--helper {
+        display: inherit;
+    }
 }
