--- a/system/templates/actor/parts/sidebar/stress.hbs
+++ b/system/templates/actor/parts/sidebar/stress.hbs
@@ -39,10 +39,7 @@
         </div>
     {{/each}}
 
-    <div class="fatex__stress__track fatex__helper__editmode">
-        <div class="fatex-headline fatex-headline--center fatex__stress__add">
-            <h3 class="fatex-headline__text">+</h3>
-        </div>
+    <div class="fatex-eb-stress-add fatex-headline fatex-headline--center fatex-headline--helper">
+        <h3 class="fatex-headline__text">+</h3>
     </div>
-
 </div>
