--- a/system/templates/actor/parts/tabs/extras.hbs
+++ b/system/templates/actor/parts/tabs/extras.hbs
@@ -26,10 +26,8 @@
             </div>
         {{/each}}
 
-        <div class="fatex__extra__add fatex__helper__editmode fatex__helper__editmode--vanish">
-            <div class="fatex-headline fatex-headline--center">
-                <h3 class="fatex-headline__text">+</h3>
-            </div>
+        <div class="fatex-eb-extra-add fatex-headline fatex-headline--center fatex-headline--helper">
+            <h3 class="fatex-headline__text">+</h3>
         </div>
     </div>
 </div>
