--- a/system/templates/actor/character.hbs
+++ b/system/templates/actor/character.hbs
@@ -27,7 +27,7 @@
                     </div>
 
                     {{!--Tabs--}}
-                    <div class="desk__tabs fatex__tabs">
+                    <div class="desk__tabs u-padding-std">
                         <nav class="fatex__tabs__navigation">
                             <a class="fatex__tabs__navigation__item item active" data-tab="skills">{{localize "FAx.Sheet.Tabs.SkillsStunts"}}</a>
                             <a class="fatex__tabs__navigation__item item" data-tab="extras">{{localize "FAx.Sheet.Tabs.Extras"}}</a>
